# melodies

./: Cargo.toml  LICENSE  README.md
blake2/: Cargo.toml
blake2/src/: lib.rs
chacha20poly1305/: Cargo.toml
chacha20poly1305/src/: lib.rs
core/: Cargo.toml
core/src/: cipher_state.rs  crypto.rs  handshake_pattern.rs  handshake_state.rs  lib.rs  symmetric_state.rs  util.rs
melodies/: Cargo.toml
melodies/src/: lib.rs
melodies/tests/: vectors.rs
ring/: Cargo.toml
ring/src/: lib.rs
src/: cipher_state.rs  crypto.rs  handshake_state.rs  lib.rs  symmetric_state.rs
tests/: vectors.rs
x25519-dalek/: Cargo.toml
x25519-dalek/src/: lib.rs
