[package]
name = "melodies-blake2"
description = "a sweet implementation of the noise protocol"
license = "Apache-2.0"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
blake2 = "0.10.4"
melodies-core = {path = "../core", version = "0.1"}
zeroize = {version = "1.5", features=["derive"]}
generic-array = {version = "*", features=["zeroize"]}
