[package]
name = "melodies-core"
description = "a sweet implementation of the noise protocol"
license = "Apache-2.0"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/benaubin/melodies"
documentation = "https://docs.rs/melodies-core"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
zeroize = {version="1.5.7", features = ["zeroize_derive"]}
