[package]
name = "melodies-ring"
description = "a sweet implementation of the noise protocol"
license = "Apache-2.0"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/benaubin/melodies"
documentation = "https://docs.rs/melodies-ring"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ring = "0.16"
melodies-core = {path = "../core", version = "0.1"}
zeroize = "1.5"
rand = {version = "0.8", features = ["getrandom"]}
