[package]
name = "melodies-x25519-dalek"
description = "a sweet implementation of the noise protocol"
license = "Apache-2.0"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/benaubin/melodies"
documentation = "https://docs.rs/melodies-x25519-dalek"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
melodies-core = {path = "../core", version = "0.1"}
x25519-dalek = "2.0.0-pre.1" # pre-release versions of crypto libs are uncomfortable!
                             # but oddly enough, the v2 release only changes version requirements
zeroize = "1.5"
rand = {version = "0.8", features = ["getrandom"]}
